# connected-systems-pygeoapi

./: Dockerfile  README.md  docker-compose-dev.yml  pyproject.toml  requirements.txt  requirements_nodeps.txt
connected-systems-api/: api.py  app.py  default-config.yml  meta.py  util.py
connected-systems-api/provider/: collection.py  datastream.py  definitions.py  deployment.py  elasticsearch.py  feature.py  procedure.py  property.py  system.py  util.py
connected-systems-api/provider/part1/: part1.py
connected-systems-api/provider/part2/: part2.py  util.py
connected-systems-api/provider/part2/formats/: om_json_scalar.py
connected-systems-api/routes/: collections.py  coverages.py  edr.py  processes.py  stac.py
connected-systems-api/templates/connected-systems/: collectionitem.html  collectionitems.html
tools/simulator/: simulator.py
